# Subramanyam

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: source_manifest.json
src/: server.py
src/ceremonies/: __init__.py  loader.py  telugu_rituals.jsonl
src/corpus/: __init__.py  download.py  ingest.py
tests/: test_ceremonies.py  test_download.py  test_http_server.py  test_ingest.py
tests/data/: sample_manifest.json  sample_source.txt
